--- a/Entrega1Gen/Entrega1GenNHibernate/Entrega1GenNHibernate.csproj
+++ b/Entrega1Gen/Entrega1GenNHibernate/Entrega1GenNHibernate.csproj
@@ -184,6 +184,7 @@
 			
 			<Compile Include="CEN\GrayLine\CapituloCEN_Redactar.cs" />
 			
+			<Compile Include="CP\GrayLine\CapituloCP_InvitarUsuario.cs" />
 			
 			
 			<Compile Include="CP\GrayLine\CapituloCP_LeerCapitulo.cs" />
